--- a/backSucursal3/src/main/resources/application.properties
+++ b/backSucursal3/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.data.mongodb.database=db_ventas
+#spring.data.mongodb.database=db_ventas
+spring.data.mongodb.uri=mongodb://admin:1234@tiendagamer-shard-00-00.so1lb.mongodb.net:27017,tiendagamer-shard-00-01.so1lb.mongodb.net:27017,tiendagamer-shard-00-02.so1lb.mongodb.net:27017/db_ventas?replicaSet=atlas-kip4sg-shard-0&ssl=true&authSource=admin
 server.port=8081
